<resources>
    <string name="app_name">P7VisitBrasov</string>
    <string name="visitBrasov">Visit BRAŞOV</string>
    <string name="description">Overview</string>
    <string name="hotels">Places to stay</string>
    <string name="attractions">Things to do</string>
    <string name="foodAndDrink">Restaurants</string>
    <string name="location">Location: Transylvania, România</string>
    <string name="elevation">Elevation: 538 m (1,765ft)</string>
    <string name="population">Population: 551,183 (2018)</string>
    <string name="inhabited">Inhabited since: 100 BC</string>
    <string name="documented">First documented: 1234 AD (Corona)</string>
    <string name="postal_code">Postal code: RO 500xxx</string>
    <string name="area_codes">Area code(s): (+40) 268</string>
    <string name="city_guide">Brașov travel guide</string>
    <string name="wikitravel">wikitravel.org/en/Brașov</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="category_allowsPets">Hotels that allow pets</string>
    <string name="category_luxury">Luxury hotels</string>
    <string name="category_spa">Hotels with a spa</string>
    <string name="Kismet_description">The basic eternal principle of the universe that transcends reality and is the source of being, non-being, and change is the Dao. Put the two together and you have Kismet Dao, the “Way of Fate”.</string>
    <string name="Kronhaus_description">Situated in the centre of Brașov, Kronhaus provides non-smoking rooms with a sunny balcony. For a comfortable holiday experience, a free car park, a beauty salon and a barber shop are also available.</string>
    <string name="Kismet_contact">📍 2B Democratiei Str, Brașov, România\n☏ +40 268514296</string>
    <string name="Kronhaus_contact">📍 25 Balcescu Nicolae Str, Brașov, România\n☏ +40 721916868</string>
    <string name="Hirscher_description">Our rooms are individually designed and furnished to be stylish and comfortable. All units are fitted with minibar, TV with premium cable channels, free wifi and wired high-speed Internet.</string>
    <string name="Hirscher_contact">📍 14 Apollonia Hirscher Str, Brașov, România\n☏ +40 368401212</string>
    <string name="Ambient_description">Enjoy superb views of the city, perfect service and culinary delights in the hotel restaurant. Utmost attention is paid to every single detail, ensuring that you spend an unforgettable stay at the Ambient hotel.</string>
    <string name="Ambient_contact">📍 27 Iuliu Maniu Str, Brașov, România\n☏ +40 268470856</string>
    <string name="Corona_description">Guests can enjoy views of the surrounding mountains in each room and there is a bathroom with a shower or a bathtub provided in all of Casa Corona units. A ski storage room can be used on site and airport shuttle services can be requested.</string>
    <string name="Corona_contact">📍 21 Castelului Str, Brașov, România\n☏ +40 735411411</string>
    <string name="Kronwell_description">Features a stylish à la carte restaurant, state-of-the art facilities, and free WiFi. Belaqva Spa and Wellness Center offers beauty therapies, a fitness studio, a sauna and an indoor pool.</string>
    <string name="Kronwell_contact">📍 7 Gării Bvd, Brașov, România\n☏ +40 368730800</string>
    <string name="Katharina_description">An architectural jewel of the 19th century, finely restored to the smallest details of the original indoor painting and brought back to life in the form of a boutique hotel.</string>
    <string name="Katharina_contact">📍 20 Poarta Schei Str, Brașov, România\n☏ +40 771060378</string>
    <string name="Deutsches_description">Situated 15 minutes walk from Brasov old town, it offers spacious and elegant rooms with amazing views over Mount Tampa and it is a great starting point to explore Poiana Brasov, Bran or Predeal.</string>
    <string name="Deutsches_contact">📍 157 De Mijloc Str, Brașov, România\n☏ +40 368410704</string>
    <string name="Jasmine_description">Located at about 5 min drive from city centre, Casa Jasmine offers air-conditioned rooms that comes with a minibar and TV. The restaurant serves delicious local and international dishes in a cosy atmosphere.</string>
    <string name="Jasmine_contact">📍 104 Vulcan Str, Brașov, România\n☏ +40 268426161</string>
    <string name="Ezio_description">Offering beautiful views from the balconies and easily accessible, it is next to the northern escarpment of Bucegi Mountains, surrounded by the Barsa Mountains and next to the Timis River.</string>
    <string name="Ezio_contact">📍 Colonel Kiss Sándor Str, Brașov, România\n☏ +40 268259520</string>
    <string name="Aro_description">Guests can sample Romanian and European cuisine at the hotel restaurant and enjoy the views over Brasov Citadel from the Belvedere Club, which is on Hotel Aro Palace top floor.</string>
    <string name="Aro_contact">📍 27 Eroilor Bvd, Brașov, România\n☏ +40 268478800</string>
    <string name="Grand_description">The hotel boasts a marvellous view and it is a perfect place for business and leisure travellers alike. It is close to the forest and between 2 ski resorts, but also near the biggest commercial area of the city.</string>
    <string name="Grand_contact">📍 6 Gării Noua Str, Brașov, România\n☏ +40 268336797</string>
    <string name="Victoria_description">Along with a restaurant, this smoking-free hotel has a 24-hour fitness centre and a bar/lounge. WiFi and car park are also included. Additionally, spa services, conference space and concierge services are available on-site.</string>
    <string name="Victoria_contact">📍 6A Victoriei Bvd, Brașov, România\n☏ +40 368800500</string>
    <string name="Gradistei_description">Guesta have free access to the spa facilities including an indoor pool, a hot tub and different types of saunas. You can also choose from a range of massages and spa therapies.</string>
    <string name="Gradistei_contact">📍 Fundata, Brașov, România\n☏ +40 37281401</string>
    <string name="Brasov_description">All rooms have their own bathrooms with shower, hairdryer, bath set, bathrobes and slippers. In addition, there is a concierge service, a sauna, a massage room and a conference room.</string>
    <string name="Brasov_contact">📍 13 Decembrie Str, Brașov, România\n☏ +40 268426633</string>
    <string name="category_outdoor">Outdoor activities</string>
    <string name="category_heritage">Heritage sites</string>
    <string name="category_amusement">Amusement parks</string>
    <string name="youTube_button">🎥This is Brașov▶</string>
    <string name="overview">Brașov is a city in the Transylvania region of Romania, ringed by the Carpathian Mountains. It is known for its medieval Saxon walls and bastions, the towering Gothic-style Black Church and lively cafes. Piaţa Sfatului (Council Square) in the cobbled old town is surrounded by colorful baroque buildings and is home to the Casa Sfatului, a former town hall turned local history museum.\n\nJust beyond Council Square is the shop-lined street of Strada Republicii. In the neighborhood of Şchei, a Romanian enclave during Saxon rule, lies the reconstructed Orthodox St. Nicholas Church, originally built in the 1300s. The First Romanian School on the church grounds displays cultural artifacts like rare books. Nearby the 16th-century fortification of Weaver Bastion, hiking trails and a cable car lead to the summit of forested Mt. Tâmpa. Attractions outside town include Bran Castle, long associated with the Dracula legend, and Poiana Brașov, a popular ski resort.</string>
    <string name="Tampa_description">Hike up one of the twisting trails or ride a cable car to reach the top of Mount Tampa. The mountain rises 900 m (2,952 ft) above sea level as a landmark that divides the new area of the town from its medieval section.</string>
    <string name="Tampa_contact">📍 Parent ranges: The Sub Carpathians, Carpathian Mountains</string>
    <string name="Zoo_description">Longtime zoo on 25 acres offering visitors a unique lions den view, a reptile house and a playground.</string>
    <string name="Zoo_contact">📍 1 Brazilor Str, Brașov, România\n☏ +40 268337787</string>
    <string name="Lake_description">The place is perfect for a lovely stroll as you gain more positive energy from the surrounding nature. If you’re traveling with family, the plains around the lake can serve as ideal spots for picnics.</string>
    <string name="Lake_contact">📍 Paltinului Str, Brașov, România</string>
    <string name="Poiana_description">Peaceful Poiana Brașov is home to a ski resort of the same name, with trails on Postăvaru Mountain, plus an ice-skating rink, an indoor recreation center, and a sports complex with tubing and luging.</string>
    <string name="Poiana_contact">📍 Lift system: 2 aerial tramways; 2 chairlift; 5 ski lifts; 1 gondola; 1 magic carpet</string>
    <string name="Seven_description">The Seven Ladders Canyon is a mountainous canyon carved by the Șapte Scări Brook in Romania in the county of Brașov, south of Timișu de Jos village. It is considered to be one of the main tourist attractions from the Piatra Mare massif.</string>
    <string name="Seven_contact">📍 Depth: 58 m, Length: 160 metres (520 ft) North-West to South-East</string>
    <string name="Citadel_description">Strategically overlooking the town and the plains to North, the Citadel is part of Brasov outer fortification system. In the center of the Citadel is a narrow courtyard displaying shields, lances, a canon and coat of arms.</string>
    <string name="Citadel_contact">📍 5 Dealul Cetăţii Str, Brașov, România</string>
    <string name="Feldioara_description">Ridged by the Teutonic Knights, the Feldioara Fortress is the oldest fortification in Brasov County, being documented since 1225. At the time of its construction, t had strong walls and was the most important fortification in Transylvania.</string>
    <string name="Feldioara_contact">📍 DC42, Feldioara, Brașov, România\n☏ +40 268708237</string>
    <string name="Bran_description">Dramatic, 14th-century castle, former royal residence and alleged legend of Count Dracula inspiration. The fortress is on the Transylvanian side of the historical border with Wallachia.</string>
    <string name="Bran_contact">📍 At just 15 miles away from Brașov.</string>
    <string name="Weavers_description">Preserved fortress bastion built in the 15th century, now housing a medieval museum. In the Middle Ages were organized in so called guildes,and each guild had the responsibility to defend a certain section of the town walls.</string>
    <string name="Weavers_contact">📍 9 George Coșbuc Str, Brașov, România</string>
    <string name="Yekaterina_description">Yekaterina Gate in Braşov, Romania, was built by the Tailors’ Guild, in 1559 for defensive purposes instead of an old gate destroyed by the flood in 1526. It is named after St. Yekaterina Monastery that was situated here in former times.</string>
    <string name="Yekaterina_contact">📍 Ludwig van Beethoven Str, Brașov, România</string>
    <string name="Adventure_description">Outdoor adventure park by a lake offering forest-lined ropes and zipline courses for all levels. A recreational activity outdoors, a very enjoyable way to spend free time with family and friends.</string>
    <string name="Adventure_contact">📍 16 Paltinului Str, Brașov, România\n☏ +40 755085555</string>
    <string name="Aquatic_description">Spacious leisure center with 6 heated indoor pools, 3 types of sauna, a fitness room, a large hot tub, a relaxing grotto and 3 massage salons.</string>
    <string name="Aquatic_contact">📍 2F Griviței Bvd, Brașov, România\n☏ +40 268440070</string>
    <string name="youTube_video">Brașov video presentation</string>
    <string name="slide_show">Photo slideshow</string>
    <string name="city_image">Photo from above</string>
</resources>