<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.p7visitbrasov.OverviewFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/youTube_presentation"
        android:layout_below="@+id/view_flipper"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:text="@string/overview"
        android:textColor="@color/DarkGreen"
        android:textSize="15sp"
        android:textStyle="bold" />

    <ViewFlipper
        android:id="@+id/view_flipper"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/slide_show" />

    <Button
        android:id="@+id/youTube_presentation"
        style="?android:breadCrumbTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_button"
        android:contentDescription="@string/youTube_video"
        android:text="@string/youTube_button"
        android:textAllCaps="false"
        android:textColor="@color/DarkGreen"
        android:textSize="20sp" />

</RelativeLayout>