<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/FireBrickDark"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:contentDescription="@string/city_image"
        android:src="@drawable/citycentre" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_guide"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/wikitravel"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

</LinearLayout>